--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,37 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	background-color: antiquewhite;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.header {
+	max-width: 80%;
+	margin: 0 auto;
+	padding: 12px 10px;
+	font-size: 25px;
+}
+.header a {
+	color: chartreuse;
+	display: inline-block;
+	padding-top: 10px;
+	text-decoration: none;
+}
+
+main {
+	max-width: 80%;
+	margin: 0 auto;
+	padding-top: 30px;
+	padding-bottom: 80px;
 }
