--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
 html,
 body {
 	padding: 0;
@@ -5,15 +6,7 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	background-color: antiquewhite;
-}
-
-a {
-	color: inherit;
-	text-decoration: none;
-}
-
-* {
-	box-sizing: border-box;
+	
 }
 
 .header {
@@ -34,4 +27,69 @@ main {
 	margin: 0 auto;
 	padding-top: 30px;
 	padding-bottom: 80px;
+}
+
+.recipe-list{
+	display: grid;
+	grid-template-columns: repeat(3,1fr);
+	gap: 40px;
+	list-style: none;
+	padding: 0;
+}
+
+.recipe-card a{
+	display: block;
+	height:100%;
+	text-decoration: none;
+	color: #444;
+	font-size:22px;
+}
+.recipe-card img{
+	display: block;
+	height: 300px;
+	object-fit: cover;
+	margin-bottom: 12px;
+	border:0.5px solid #444;
+}
+
+.recipe h1 {
+  font-size: 48px;
+  font-weight: bolder;
+  color: #000;
+  margin-bottom: 15px;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+}
+
+.recipe img {
+	display: block;
+	height: 500px;
+	object-fit: cover;
+	margin-bottom: 12px;
+  border: 0.5px solid #444;
+}
+
+.breakdown {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 10px;
+  border: 0.5px solid #444;
+}
+
+.ingredients {
+  list-style: none;
+  padding: 25px 10px;
+  border-right: 0.5px solid #444;
+}
+
+.ingredient {
+  margin-bottom: 15px;
+}
+
+.instructions {
+  padding: 15px;
 }
