--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,12 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mate+SC&display=swap");
 html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	background-color: antiquewhite;
-	
+	font-family: "Mate SC", serif;
+	background-color: rgb(235, 185, 134);
 }
 
 .header {
@@ -16,10 +16,11 @@ body {
 	font-size: 25px;
 }
 .header a {
-	color: chartreuse;
+	color: rgb(106, 202, 10);
 	display: inline-block;
 	padding-top: 10px;
 	text-decoration: none;
+	font-size: 3rem;
 }
 
 main {
@@ -29,67 +30,80 @@ main {
 	padding-bottom: 80px;
 }
 
-.recipe-list{
+.recipe-list {
 	display: grid;
-	grid-template-columns: repeat(3,1fr);
+	grid-template-columns: repeat(3, 1fr);
 	gap: 40px;
 	list-style: none;
 	padding: 0;
 }
 
-.recipe-card a{
+.recipe-card a {
 	display: block;
-	height:100%;
+	height: 100%;
 	text-decoration: none;
 	color: #444;
-	font-size:22px;
+	font-size: 22px;
 }
-.recipe-card img{
+.recipe-card img {
 	display: block;
 	height: 300px;
 	object-fit: cover;
 	margin-bottom: 12px;
-	border:0.5px solid #444;
+	border: 0.5px solid #444;
+	box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+		-8px -8px 12px 0 rgba(255, 255, 255, 0.1);
+	/* box-shadow: 3px 3px 3px rgb (208 208 208), -3px -3px 3px rgb (248 248 248); */
+	border-radius: 3px;
 }
 
 .recipe h1 {
-  font-size: 48px;
-  font-weight: bolder;
-  color: #000;
-  margin-bottom: 15px;
+	font-size: 48px;
+	font-weight: bolder;
+	color: #000;
+	margin-bottom: 15px;
+	font-family: "Viaoda Libre", cursive;
+	text-transform: capitalize;
 }
 
 .content {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 30px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 350px;
+	gap: 30px;
 }
 
 .recipe img {
 	display: block;
-	height: 500px;
+	height: 350px;
+	/* width: 400px; */
 	object-fit: cover;
 	margin-bottom: 12px;
-  border: 0.5px solid #444;
+	border: 0.5px solid #444;
+	box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+		-8px -8px 12px 0 rgba(255, 255, 255, 0.1);
+	border-radius: 3px;
 }
 
 .breakdown {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  gap: 10px;
-  border: 0.5px solid #444;
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+	gap: 10px;
+	border: 0.5px solid #444;
+	box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+	-8px -8px 12px 0 rgba(255, 255, 255, 0.1);
 }
 
 .ingredients {
-  list-style: none;
-  padding: 25px 10px;
-  border-right: 0.5px solid #444;
+	list-style: none;
+	padding: 25px 10px;
+	border-right: 0.5px solid #444;
 }
 
 .ingredient {
-  margin-bottom: 15px;
+	margin-bottom: 15px;
 }
 
 .instructions {
-  padding: 15px;
+	padding: 15px;
 }
